# trusted_library_database

./: README.md  alembic.ini  pyproject.toml  requirements.txt  setup.cfg
migrations/: env.py
migrations/versions/: 2023_11_29_1325-9af60c4dd679_первая_миграция.py  672d7b1b9d62_2_migration.py  9079bd732fac_1_migration.py  de0422ba6083_create_tables22.py
tld/: auth.py  config.py  crud.py  db.py  main.py  models.py  schemas.py
tld/crud/: approver.py  author.py  company.py  library.py  user.py
tld/crud_1/: approved_library.py  approver.py  company.py
tld/handlers/: handlers.py  login_handler.py
